Code adjustment for working on Tesseract 4.1.2

--- a/templates/gtdrparser.main.html
+++ b/templates/gtdrparser.main.html
@@ -55,6 +55,17 @@
                         </div>
                         <div>
                             <div class="grid_3 prefix_1">
+                                    Version
+                            </div>
+                            <div class="grid_2">
+                                    <select id="version" name="version">
+                                        <option value="exchain">Exchain</option>
+                                        <option value="nextage">Nex+age</option>
+                                    </select>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="grid_3 prefix_1">
                                     Song Title Language
                             </div>
                             <div class="grid_2">
